tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@validation__unknown_across_files.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/validation/unknown_across_files.txt
---
error: Unknown filter `unknown_filter`
 --> a.txt:1:11
  |
1 | {{ name | unknown_filter }}
  |           ^^^^^^^^^^^^^^

error: Unknown function `unknown_func`
 --> b.txt:1:4
  |
1 | {{ unknown_func() }}
  |    ^^^^^^^^^^^^^^

error: Unknown test `unknown_test`
 --> c.txt:1:15
  |
1 | {% if name is unknown_test %}yes{% endif %}
  |               ^^^^^^^^^^^^
